# well-being-app

./: .gitignore  ARCHITECTURE.md  PROJECT_JOURNEY.md  README.md  Ultra-Premium Cross-Platform Health & Productivity Desktop App – Expanded Whole-Body & Mental Health Scope.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
app/: index.html  popup.html
app/css/: base.css  breaks.css  components.css  design-system.css  layout.css  modules.css  popup.css  tokens.css
app/css/modules/: coach.css  dashboard.css  eye.css  focus.css  lifestyle.css  mental.css  movement.css  msk.css  settings.css
app/js/: app.js  breaks.js  charts.js  main.js  notifications.js  popup.js  selftest.js  store.js  timer.js  utils.js
app/js/core/: bus.js  charts.js  modal.js  notify.js  scheduler.js  score.js  store.js  tauri.js  utils.js
app/js/lib/: lfm2_5.js
app/js/modules/: ai-coach.js  coach.js  dashboard.js  eye-health.js  eye.js  focus.js  lifestyle.js  mental-health.js  mental.js  movement.js  msk.js  musculoskeletal.js  settings.js
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tools/: serve.mjs
